--- a/packages/meteoris:theme-admin/client/views/main.html
+++ b/packages/meteoris:theme-admin/client/views/main.html
@@ -15,4 +15,11 @@
     {{> meteoris_themeAdminControlSidebar}}
     {{/AdminLTE}}
     {{/if}}
+<!--
+
+    <script>
+        var vh = $(window).height();
+        var ch = vh - 102;
+        $('.content').css('');
+    </script>-->
 </template>
