fixing role and adding user helper isExist for client access

--- a/packages/meteoris:role/client/views/index.html
+++ b/packages/meteoris:role/client/views/index.html
@@ -60,7 +60,7 @@
                         </th>
                         {{else}}
                         <th>
-                            No Collection
+                            No Collection Found, Create a new one!
                         </th>
                         {{/each}}
                         </tr>
@@ -93,7 +93,7 @@
                             </tr>
                             {{else}}
                             <tr>
-                                <td colspan="5">No Group</td>
+                                <td colspan="5">No Group Found, Create a new one!</td>
                             </tr>
                             {{/each}}
                         </tbody>
