--- a/packages/meteoris:role/client/views/_formCollection.html
+++ b/packages/meteoris:role/client/views/_formCollection.html
@@ -4,14 +4,14 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Tambah Collection</h4>
+        <h4 class="modal-title">Add Collection</h4>
       </div>
       <form id="meteoris_roleFormGroup" class="form-horizontal">
       <div class="modal-body">
             <div class="form-group {{#if error 'name'}}has-error{{/if}}">
-                <label for="name" class="col-sm-3 control-label">Nama *</label>
+                <label for="name" class="col-sm-3 control-label">Name *</label>
                 <div class="col-sm-9">
-                    <input type="text" id="collectionName" value="{{name}}" placeholder="Nama" class="form-control" autofocus="true">
+                    <input type="text" id="collectionName" value="{{name}}" placeholder="Name" class="form-control" autofocus="true">
                     <span class="help-block">{{error "name"}}</span>
                 </div>
             </div>
