--- a/packages/meteoris:role/client/views/_formGroup.html
+++ b/packages/meteoris:role/client/views/_formGroup.html
@@ -4,21 +4,21 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Tambah Grup</h4>
+        <h4 class="modal-title">Add Grup</h4>
       </div>
       <form id="meteoris_roleFormGroup" class="form-horizontal">
       <div class="modal-body">
             <div class="form-group {{#if error 'name'}}has-error{{/if}}">
-                <label for="name" class="col-sm-3 control-label">Nama *</label>
+                <label for="name" class="col-sm-3 control-label">Name *</label>
                 <div class="col-sm-9">
-                    <input type="text" id="groupName" value="{{name}}" placeholder="Nama" class="form-control" autofocus="true">
+                    <input type="text" id="groupName" value="{{name}}" placeholder="Name" class="form-control" autofocus="true">
                     <span class="help-block">{{error "name"}}</span>
                 </div>
             </div>
             <div class="form-group {{#if error 'description'}}has-error{{/if}}">
-                <label for="description" class="col-sm-3 control-label">Deskripsi</label>
+                <label for="description" class="col-sm-3 control-label">Description</label>
                 <div class="col-sm-9">
-                    <input type="text" id="groupDescription" value="{{description}}" placeholder="Deskripsi" class="form-control">
+                    <input type="text" id="groupDescription" value="{{description}}" placeholder="Description" class="form-control">
                     <span class="help-block">{{error "description"}}</span>
                 </div>
             </div>
