--- a/packages/meteoris:role/client/views/assignUsers.html
+++ b/packages/meteoris:role/client/views/assignUsers.html
@@ -49,7 +49,7 @@
             <thead>
                 <tr>
                     <th style="width: 30px;"><input type="checkbox" id="checkAllUsersNotInGroup"/></th>
-                    <th>Nama</th>
+                    <th>Name</th>
                     <th>Email</th>
                 </tr>
             </thead>
@@ -84,7 +84,7 @@
             <thead>
                 <tr>
                     <th style="width: 30px;"><input type="checkbox" id="checkAllUsersInGroup"/></th>
-                    <th>Nama</th>
+                    <th>Name</th>
                     <th>Email</th>
                 </tr>
             </thead>
