--- a/packages/meteoris:backup-restore/client/views/index.html
+++ b/packages/meteoris:backup-restore/client/views/index.html
@@ -33,5 +33,14 @@
             </div><!-- /.box-body -->
         </div><!-- /.box -->
 
+        <div class="box">
+            <div class="box-header">
+                <h3 class="pull-left">Config</h3>
+            </div>
+            <div class="box-body">
+                {{> meteoris_backupRestore_form}}
+            </div>
+        </div>
+
     </section><!-- /.content -->  
 </template>
